# sfio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
docs/source/: file_read_write.rst  simulation_box.rst
src/fio/: __init__.py  atsk.py  base.py  box.py  func.py  lmpdump.py  lmplog.py  psf.py  supported_formats.py
src/fio/data/: gold_fcc.dump
src/sfio/: __init__.py  atsk.py  base.py  box.py  dataurl.py  func.py  json.py  lmpdata.py  lmpdump.py  lmplog.py  pdb.py  psf.py  supported_formats.py  yaml.py
src/sfio/data/: dimer_cis.data  gold_fcc.atsk  ptable.parquet  rotigotine.psf
src/sfio/func/: __init__.py  box.py
tests/: test_box.py  test_dataurl.py  test_filehandlers.py  test_filescan.py  test_func.py  test_indexing.py
