[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fio.data" = ["*"]

[tool.setuptools.dynamic]
version = {file = "src/fio/VERSION"}

[project]
name = "fio"
dynamic = ["version"]
authors = [
    {name = "Henry Chan", email = "hyiprc@gmail.com"},
]
description = "File I/O module"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["File formats", "Data handling", "Serialization"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
]

[project.urls]
Repository = "https://github.com/hyiprc/fio"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "sphinx",
]


[tool.black]
line-length = 79
target-version = ['py39']
skip-string-normalization = true
exclude = "docs/|tests/"

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
profile = "black"
force_sort_within_sections = false
group_by_package = true
float_to_top = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=importlib -ra -q -l"
testpaths = [
    "tests",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_files = [
    "src/fio/VERSION",
]
